--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -577,7 +577,15 @@
   
   <div class="calendar-container">
     <div class="calendar-navigation">
-      <div class="calendar-nav-left">
+      <div class="calendar-view-toggle">
+        <button id="weekly-view-btn" class="view-toggle-btn active" title="Weekly View">
+          <span class="material-icons">view_list</span>
+        </button>
+        <button id="monthly-view-btn" class="view-toggle-btn" title="Monthly View">
+          <span class="material-icons">view_module</span>
+        </button>
+      </div>
+      <div class="calendar-nav-right">
         <button id="prev-period" class="action-btn">
           <span class="material-icons">chevron_left</span>
         </button>
@@ -587,14 +595,6 @@
         </button>
         <button id="today-btn" class="action-btn today-btn">
           Today
-        </button>
-      </div>
-      <div class="calendar-view-toggle">
-        <button id="weekly-view-btn" class="view-toggle-btn active" title="Weekly View">
-          <span class="material-icons">view_list</span>
-        </button>
-        <button id="monthly-view-btn" class="view-toggle-btn" title="Monthly View">
-          <span class="material-icons">view_module</span>
         </button>
       </div>
     </div>
