shifted facilitator management tab to employees page

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -230,8 +230,8 @@
       </div>
     </div>
 
-    <!-- Facilitator Management Section -->
-    <div class="facilitator-management">
+    <!-- Facilitator Management Section (Hidden by default) -->
+    <div class="facilitator-management" id="facilitatorManagement" style="display: none;">
       <!-- Header -->
       <div class="facilitator-header">
         <div class="facilitator-header-content">
@@ -249,7 +249,7 @@
           </button>
           <button class="facilitator-action-btn primary">
             <span class="material-icons">add</span>
-            + Add User
+            + Add Facilitator
           </button>
         </div>
       </div>
@@ -373,14 +373,6 @@
       </div>
 
       </div>
-    </div>
-
-    <!-- Navigation Tabs (Always Visible) -->
-    <div class="facilitator-nav-tabs">
-      <button class="facilitator-nav-tab active" data-tab="overview">
-        <span class="material-icons">bar_chart</span>
-        <span>Overview</span>
-      </button>
     </div>
 
   </main>
