fixed facil management tab and fixed add employee button

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -248,8 +248,8 @@
             Import
           </button>
           <button class="facilitator-action-btn primary">
-            <span class="material-icons">add</span>
-            + Add Facilitator
+            <span class="material-icons">person_add</span>
+            <span>Add Employee</span>
           </button>
         </div>
       </div>
